# yogarepublic-android

./: .gitignore  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mysore/ashtanga/yoga/yogarepublic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mysore/ashtanga/yoga/yogarepublic/: CardFragment.kt  EfitnessManager.kt  Extensions.kt  FirebaseManager.kt  FridayFragment.kt  Grafik.kt  MainActivity.kt  Membership.kt  MembershipsActivity.kt  MembershipsAdapter.kt  MondayFragment.kt  SaturdayFragment.kt  Schedule.kt  SplashActivity.kt  SundayFragment.kt  ThursdayFragment.kt  Timetable.kt  TimetableAdapter.kt  TimetableFragment.kt  TuesdayFragment.kt  WednesdayFragment.kt  import.kt
app/src/main/res/drawable/: button_style.xml  splashscreen.xml
app/src/main/res/layout/: activity_main.xml  activity_memberships.xml  activity_schedule.xml  activity_splash.xml  fragment_card.xml  fragment_monday.xml  fragment_timetable.xml  recyclerview_item_row.xml
app/src/main/res/menu/: navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-pl/: strings.xml
app/src/test/java/com/mysore/ashtanga/yoga/yogarepublic/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
